# esl-services-backend

./: .gitignore  Cargo.toml  README.md  build.rs  esl_services_backend-manifest.rc  esl_services_backend.exe.manifest  logo.ansi.txt
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs
src/services/: esl_service.rs  generic_label.rs  mod.rs  parse_log.rs  poll.rs  pricer_service.rs
src/services/pricer/: item.rs  labels.rs  mod.rs  status.rs
src/settings/: mod.rs
src/ui/: esl_tui.rs  mod.rs
src/utils/: mod.rs  unicode_string.rs
