[package]
name = "hublot-esl-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version="0.13.1", features=["toml"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
uuid =  { version = "1.3.0", features = ["v4"] }
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json", "socks", "native-tls", "rustls-tls"] }
custom_error = "1.9.2"
unidecode = "0.3.0"
esl-services-api = {git="ssh://git@gitlab.hublot.io/hublot-crm/esl-services-api.git"}
# esl-services-api = {path="../esl-services-api"}

