[package]
name = "esl-services-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version="0.13.1", features=["toml"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["json", "macros"] }
lazy_static = "1.4.0"
uuid =  { version = "1.3.0", features = ["v4"] }
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls", "native-tls-vendored"] }
custom_error = "1.9.2"
unidecode = "0.3.0"
esl-utils = {git="https://github.com/hublot-io/esl-utils"}
image = "0.24.5"
ansi-to-tui = "3.0.0"
indicatif = {version="0.17.3", features=["improved_unicode", "unicode-width"]}
console = {version="0.15.5", features=["unicode-width"]}
chrono = "0.4.23"

[build-dependencies]
embed-resource = "2.1.1"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
